# mlsops_ods

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml  start.py
.dvc/: config
data_dvc/interim/: .gitignore
data_dvc/processed/: .gitignore
data_dvc/raw/: .gitignore  initial.json.dvc
docs/: Makefile  conf.py  index.rst  make.bat
src/: __init__.py
src/data/: clean_data.py  select_region.py
src/features/: add_features.py
workflow/: Snakefile
