[tool.poetry]
name = "mlsops_ods"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
snakemake = "^7.6.1"
python-dotenv = "^0.20.0"
boto3 = "^1.22.7"
pandas = "^1.4.2"
click = "^8.1.3"
PyDrive2 = "^1.10.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
